Revert "Added bottom margin to CEQR filter as fix for spacing on Edge (#1683)" (#1684)
This reverts commit 75543e21f4ff65cb18989ce093851db6a8f48c36.

--- a/client/app/styles/modules/_m-project-filters.scss
+++ b/client/app/styles/modules/_m-project-filters.scss
@@ -87,9 +87,6 @@ $project-filters-font-size: rem-calc(12);
     font-size: $project-filters-font-size;
   }
 
-  .filter-section-ceqr {
-    margin-bottom: 2em;
-  }
 }
 
 .filter-text-input {
